# mac-launcher

./: Cargo.toml  READEME.md  ideas.txt
bench/: searching.rs
src/: backend.rs  frontend.rs  lib.rs  main.rs
