[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
fuse-rust = "0.3.0"
dns-lookup = "1.0"
filemagic = "*"
url = "2.3"
tui = "0.19"
crossterm = "0.25"
rayon = "1.5"
fuzzy-matcher = "*"
toml = "0.5"
serde_derive = "1.0"
serde = "1.0"
lazy_static = "1.4"

[dev-dependencies.criterion]
version = "0.4"
features = ["html_reports"]

[[bench]]
path = "bench/searching.rs"
name = "searching"
harness = false

[[bin]]
name = "launcher"
bench = false
